--- a/app/globals.css
+++ b/app/globals.css
@@ -2,28 +2,87 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+/* :root[data-theme="light"] { */
+/*   --text: hsl(228, 41%, 16%); */
+/*   --background: hsl(168, 33%, 94%); */
+/*   --primary: hsl(225, 80%, 26%); */
+/*   --secondary: hsl(348, 80%, 66%); */
+/*   --accent: hsl(31, 81%, 50%); */
+/* } */
+/**/
+/* :root[data-theme="dark"] { */
+/*   --text: hsl(228, 41%, 84%); */
+/*   --background: hsl(168, 33%, 6%); */
+/*   --primary: hsl(225, 80%, 74%); */
+/*   --secondary: hsl(348, 80%, 34%); */
+/*   --accent: hsl(31, 81%, 50%); */
+/* } */
+
+@layer base {
+  :root {
+    --background: 166 54% 99%;
+    --foreground: 166 52% 5%;
+    --muted: 166 15% 91%;
+    --muted-foreground: 166 0% 31%;
+    --popover: 166 54% 99%;
+    --popover-foreground: 166 52% 5%;
+    --card: 166 54% 99%;
+    --card-foreground: 166 52% 5%;
+    --border: 166 2% 92%;
+    --input: 166 2% 92%;
+    --primary: 166 91% 9%;
+    --primary-foreground: 166 91% 49%;
+    --secondary: 166 19% 89%;
+    --secondary-foreground: 166 19% 29%;
+    --accent: 166 27% 81%;
+    --accent-foreground: 166 27% 21%;
+    --destructive: 3 87% 40%;
+    --destructive-foreground: 0 0% 100%;
+    --ring: 166 91% 9%;
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 166 51% 3%;
+    --foreground: 166 21% 98%;
+    --muted: 166 15% 9%;
+    --muted-foreground: 166 0% 69%;
+    --popover: 166 51% 3%;
+    --popover-foreground: 166 21% 98%;
+    --card: 166 51% 3%;
+    --card-foreground: 166 21% 98%;
+    --border: 166 2% 11%;
+    --input: 166 2% 11%;
+    --primary: 166 91% 9%;
+    --primary-foreground: 166 91% 49%;
+    --secondary: 166 18% 17%;
+    --secondary-foreground: 166 18% 77%;
+    --accent: 166 26% 25%;
+    --accent-foreground: 166 26% 85%;
+    --destructive: 3 87% 58%;
+    --destructive-foreground: 0 0% 100%;
+    --ring: 166 91% 9%;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   scroll-behavior: smooth;
 }
 
-@font-face {
-  font-family: "AvenirNextW10-Bold";
-  src: url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.eot");
-  src: url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.eot?#iefix") format("embedded-opentype"),
-    url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.woff2") format("woff2"),
-    url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.woff") format("woff"),
-    url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.ttf") format("truetype"),
-    url("//db.onlinewebfonts.com/t/e5c490a944bc2b2746f0c851501e46c7.svg#AvenirNextW10-Bold") format("svg");
-}
-
-.Avenir {
-  font-family: AvenirNextW10-Bold;
-  font-display: swap;
+body[data-scroll-locked][data-scroll-locked] {
+  margin-right: 17px !important;
 }
 
 .grr {
@@ -42,17 +101,57 @@ body {
   font-size: 80px;
 }
 
-.font-4 {
-  font-family: Inter, sans-serif;
-}
-
 .tr04 {
   transition: 0.4s;
 }
 
-.clearNav {
-  backdrop-filter: saturate(180%) blur(5px) !important;
-  background-color: rgba(0, 0, 0, 0.7) !important;
+.nav-separator {
+  /* backdrop-blur-sm backdrop-saturate-150 */
+  backdrop-filter: blur(4px) saturate(150%);
+  background-color: hsl(var(--background) / 0.5)
+}
+
+.blackboard {
+  background: rgb(11, 93, 74);
+  background: radial-gradient(circle, rgba(11, 93, 74, 1) 0%, rgba(2, 44, 34, 1) 65%);
+}
+
+.chalk {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 20%, rgba(0, 0, 0, 1) 100%);
+}
+
+.wood-texture {
+  background-image: linear-gradient(180deg, rgba(92, 64, 50, 0.3) 50%, rgba(0, 0, 0, 0.3) 100%), url("/images/WoodTexture.png");
+  background-size: 1100px 300px;
+  background-repeat: repeat;
+  background-position: center;
+  filter: blur(0.5px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 1)
+}
+
+.wood-texture2 {
+  background-image: linear-gradient(180deg, rgba(92, 64, 50, 0.3) 50%, rgba(0, 0, 0, 0.3) 100%), url("/images/wood-texture2.png");
+  background-size: 300px 1100px;
+  background-repeat: repeat;
+  background-position: center;
+  filter: blur(0.5px)
+}
+
+.wood-texture3 {
+  background-image: linear-gradient(180deg, rgba(92, 64, 50, 1) 50%, rgba(0, 0, 0, 1) 100%), url("/images/WoodTexture.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  filter: brightness(2) contrast(0.5);
+}
+
+.sponge {
+  background-image: url("/images/sponge.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  filter: blur(1px)
 }
 
 .fsac4 {
@@ -87,72 +186,4 @@ body {
 
 .fkrr1 {
   font-family: "Inter", sans-serif;
-}
-
-
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
-  }
-}
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-
-  body {
-    @apply bg-background text-foreground;
-  }
 }
