--- a/app/(protected)/playground/styles.css
+++ b/app/(protected)/playground/styles.css
@@ -4,6 +4,10 @@
     font-family: Arial, Helvetica, sans-serif;
   }
 
+  .neg-shadow {
+    box-shadow: 0 -1px 3px 0 rgb(0 0 0 / 0.1), 0 -1px 2px -1px rgb(0 0 0 / 0.1);
+  }
+
   ::-webkit-scrollbar {
     width: 10px;
   }
