--- a/app/globals.css
+++ b/app/globals.css
@@ -187,3 +187,21 @@ body[data-scroll-locked][data-scroll-locked] {
 .fkrr1 {
   font-family: "Inter", sans-serif;
 }
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    scale: 0.7;
+  }
+
+  to {
+    opacity: 1;
+    scale: 1;
+  }
+}
+
+.block-appear {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0% cover 30%;
+}
